--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,12 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>SpringWebProject</groupId>
   <artifactId>SpringWebProject</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>${revision}</version>
   <packaging>war</packaging>
+  <properties>
+    <revision>0.0.1-SNAPSHOT</revision>
+  </properties>
+
   <build>
     <sourceDirectory>src</sourceDirectory>
     <plugins>
