--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <version>${revision}</version>
   <packaging>war</packaging>
   <properties>
-    <revision>0.0.1-SNAPSHOT</revision>
+    <revision>0.0.1</revision>
   </properties>
 
   <build>
