--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,8 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>SpringWebProject</groupId>
   <artifactId>SpringWebProject</artifactId>
-  <version>${revision}</version>
+  <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
-  <properties>
-    <revision>0.0.1</revision>
-  </properties>
 
   <build>
     <sourceDirectory>src</sourceDirectory>
