--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <groupId>com.devonfw</groupId>
   <artifactId>new-project</artifactId>
   <version>2.0.0-SNAPSHOT</version>
-  <packaging>war</packaging>
+  <packaging>jar</packaging>
 
   <build>
     <sourceDirectory>src</sourceDirectory>
