--- a/pom.xml
+++ b/pom.xml
@@ -56,7 +56,7 @@
   <distributionManagement>
     <snapshotRepository>
       <id>nexusonpl</id>
-      <url>https://devon.s2-eu.capgemini.com/nexus3/repository/maven-snapshots/</url>
+      <url>http://nexus3-core:8081/nexus3/maven-snapshots/</url>
     </snapshotRepository>
     <repository>
       <id>nexusonpl</id>
