--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.1.0-SNAPSHOT" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.1.0-SNAPSHOT http://maven.apache.org/xsd/maven-4.1.0-SNAPSHOT.xsd">
+  <modelVersion>4.1.0-SNAPSHOT</modelVersion>
   <groupId>com.devonfw</groupId>
   <artifactId>new-project</artifactId>
-  <version>4.0.0</version>
+  <version>4.1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
   <build>
@@ -71,7 +71,7 @@
   	<dependency>
   		<groupId>javax.servlet</groupId>
   		<artifactId>javax.servlet-api</artifactId>
-  		<version>4.0.0-b01</version>
+  		<version>4.1.0-SNAPSHOT-b01</version>
   	</dependency>
   </dependencies>
   <distributionManagement>
