--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.devonfw</groupId>
   <artifactId>new-project</artifactId>
-  <version>4.5.0-SNAPSHOT</version>
+  <version>4.5.0</version>
   <distributionManagement>
     <repository>
       <id>pl-nexus</id>
